[package]
name = "pumpfun-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net", "time"] }
solana-client = "2.2.7"
# i dont need the full sdk
solana-signature = "2.2.1"
solana-pubkey = "2.2.1"
solana-commitment-config = "2.2.1"
solana-transaction-status-client-types = "2.2.1"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
mpl-token-metadata = "5.1.0"

dotenvy = "0.15.7"
log = "0.4.27"
env_logger = "0.11.8"